# nebulastream

./: CMakeLists.txt
.github/workflows/: build_and_test.yml  create_release_image.yml  docker_image_on_demand.yml  get_dev_images.yml  nightly.yml  pr.yml
Queries/: Query0.yaml  Query1.yaml  Query2.yaml  Query3.yaml  Query4.yaml  Query5.yaml  brake_pressure_tcp_query.yaml  sncb_brake_monitoring.yaml
Tests/: README_BRAKE_TEST.md  meos_intersects_multiple.test  meos_intersects_simple.test  meos_intersects_temporal_geometry_string.test  mqtt_subscriber.py  simple_array_agg.test  sncb_brake.test  tcp_data_generator.py  temporal_sequence.test  temporal_sequence2.test  temporal_sequence3.test  temporal_sequence_aggregation.test  var_aggregation.test
Tests/Functions/: aintersects_simple.test  econtains_geo_tgeo.test  econtains_tgeo_geo.test  econtains_tgeo_tgeo.test  edwithin_tgeo_geo.test  eintersects_tgeo_linestring_polygon.test  tgeo_at_stbox.test
cmake/: Findmeos.cmake
docker/dependency/: Base.dockerfile  Dependency.dockerfile  Development.dockerfile  DevelopmentLocal.dockerfile
docs/design/: 20240701_static_plugin_registry.md
grpc/: SerializableVariantDescriptor.proto
nes-common/include/: ExceptionDefinitions.inc
nes-configurations/include/: ProtobufHelper.hpp
nes-inference/: CMakeLists.txt
nes-logical-operators/: CMakeLists.txt
nes-memory/: TupleBufferImpl.cpp  TupleBufferImpl.hpp
nes-nebuli/: CMakeLists.txt
nes-nebuli/include/: LegacyOptimizer.hpp  NebuLI.hpp
nes-nebuli/src/: NebuLI.cpp  NebuLIStarter.cpp
nes-physical-operators/: CMakeLists.txt
nes-physical-operators/include/: EmitPhysicalOperator.hpp  HashMapOptions.hpp  HashMapSlice.hpp  MapPhysicalOperator.hpp  PhysicalOperator.hpp  ScanPhysicalOperator.hpp  SelectionPhysicalOperator.hpp  SequenceOperatorHandler.hpp  SequencePhysicalOperator.hpp  SinkPhysicalOperator.hpp  UnionPhysicalOperator.hpp  WindowProbePhysicalOperator.hpp
nes-physical-operators/src/: EmitPhysicalOperator.cpp  HashMapSlice.cpp  MapPhysicalOperator.cpp  PhysicalOperator.cpp  ScanPhysicalOperator.cpp  SelectionPhysicalOperator.cpp  SequenceOperatorHandler.cpp  SequencePhysicalOperator.cpp  UnionPhysicalOperator.cpp  WindowBuildPhysicalOperator.cpp  WindowProbePhysicalOperator.cpp
nes-physical-operators/tests/: EmitPhysicalOperatorTest.cpp
nes-plugins/: CMakeLists.txt
nes-plugins/MEOS/: CMakeLists.txt  MEOSWrapper.cpp
nes-plugins/MEOS/include/: MEOSWrapper.hpp
nes-runtime/include/: ExecutionContext.hpp
nes-runtime/src/: ExecutionContext.cpp
nes-single-node-worker/src/: SingleNodeWorkerStarter.cpp
nes-sinks/src/: FileSink.cpp  PrintSink.cpp
nes-sources/private/: FileSource.hpp  SourceThread.hpp
nes-sources/src/: FileSource.cpp  Source.cpp  SourceHandle.cpp  SourceProvider.cpp  SourceThread.cpp  SourceValidationProvider.cpp
nes-sql-parser/: AntlrSQL.g4
nes-sql-parser/src/: AntlrSQLQueryPlanCreator.cpp
nes-systests/systest/: CMakeLists.txt
scripts/: tcp_source_csv_server.py
vcpkg/: vcpkg.json
vcpkg/custom-triplets/: arm64-linux-none-libcxx.cmake  arm64-linux-none-local.cmake
(+241 files in other folders)
